# flask-user-authentication

./: .gitignore  config.py  license.txt  main.py  pyproject.toml
flask_auth/: __init__.py  auth.py  models.py
flask_auth/static/: styles.css
flask_auth/templates/: base.html  dashboard.html  index.html  login.html  register.html
flask_user_authentication/: __init__.py  auth.py
flask_user_authentication/static/: styles.css
flask_user_authentication/templates/: register.html
migrations/versions/: ad369ddfb1b6_.py  b5b708d45d0c_initial_migration.py
static/: styles.css
templates/: base.html  dashboard.html  index.html  login.html  register.html
